# python-worker

./: .gitignore  backfill.py  pyproject.toml  seed_matches.py
app/: cli.py  main.py  worker.py  worker_v2.py
app/api/v1/endpoints/: matches.py
app/core/: config.py
app/schemas/: match.py
app/services/: database.py  points.py  scraper.py
