[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "soccerdata>=1.8.8",
    "supabase>=2.27.2",
    "ujson>=5.11.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
api = "app.cli:api_main"
worker = "app.cli:worker_entry"
worker-v2 = "app.cli:worker_v2_entry"

[tool.setuptools.packages.find]
include = ["app*"]
